--- a/virtual/pyvenv.cfg
+++ b/virtual/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /home/evance/Documents/Pitch/virtual/bin
+home = /usr/bin
 include-system-site-packages = false
-version = 3.9.7
+version = 3.8.10
